Fix CORS: permit OPTIONS preflight, hardcode Vercel origin, allow all headers